# git-clean

./: .gitignore  README.md  pyproject.toml  requirements.txt  version.yaml
.github/workflows/: mypy.yml
src/git_clean/: __main__.py  clap.py  main.py
